Edited wiki page GettingStarted through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,9 +1,28 @@
 #summary Installation of iAssist on a Linux machine
 
+= Installation from sources =
+
+ # Make sure that the following packages are installed:
+   * libqt4-dev
+   * sqlite
+   * libqwt-dev (>=6.0)
+   * libusb-dev
+ # Fetch sources from SVN repository
+ # Run _qmake_
+ # Run _make_
+
 = Fix permissions of DS9490 USB adaptor =
+
+Avoid auto-loading of ds2490.ko by adding to _/etc/modprobe.d/blacklist.conf_:
+
+{{{
+blacklist ds2490
+}}}
 
 Create /etc/udev/rules.d/80-iassist.rules
 
 {{{
-SUBSYSTEM=="usb",ACTION=="add",ATTR{idVendor}=="04fa", ATTR{idProduct}=="2490", MODE="666"
+SUBSYSTEM=="usb",ACTION=="add",ATTR{idVendor}=="04fa",ATTR{idProduct}=="2490", MODE="666"
 }}}
+
+Restart udev and/or the whole system to apply changes.
